2010-07-09  Albert J. Wong  <ajwong@chromium.org>

        Reviewed by David Levin.

        rebaseline_chromium_webkit_tests missing --use_drt option on linux
        https://bugs.webkit.org/show_bug.cgi?id=41985

        This adds in the --use_drt option for rebaseline_chromium_webkit_tests
        so that it works on linux. This is essentially a "compile-fix" for the
        script.

        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:

2010-07-09  Nico Weber  <thakis@chromium.org>

        Unreviewed. Adding myself as committer.

        * Scripts/webkitpy/common/config/committers.py:

2010-07-09  David Kilzer  <ddkilzer@apple.com>

        Revert "<http://webkit.org/b/41788> commit-log-editor: wrong ChangeLog read when invoked from subdir with git"

        This reverts commit r62692.

        * Scripts/commit-log-editor:

2010-07-08  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Ojan Vafai.

        cleanup json_results_generator dependencies so that non-layout-tests can also use it safely
        https://bugs.webkit.org/show_bug.cgi?id=38693

        Introduced a new base class JSONResultsGeneratorBase that doesn't
        have any dependency on layout_tests packages.
        Turned JSONResultsGenerator into a wrapper class of the base class
        so that the old code can work with it during the cleanup.

        Added json_results_generator_unittest.py.

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py: Added

2010-07-09  Abhishek Arya  <inferno@chromium.org>

        Unreviewed.

        Marking myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2010-07-09  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Antti Koivisto.
