@@ -1,3 +1,9 @@
+2010-07-09  Mark Rowe  <mrowe@apple.com>
+
+        Add two new Windows test build slaves.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2010-07-09  Albert J. Wong  <ajwong@chromium.org>
 
         Reviewed by David Levin.
